# my_mt3

./: .gitignore  README.md  main.py  pyproject.toml
my_mt3/: audio.py  dataset.py  infer.py  metrics.py  model.py  tokenizer.py  train.py
run/: downloads_sf.py  make_synth_piano.py  midi2wav.py  train_minimal.py
